# Hermitian_matrix_inverse_by_jacobi_method

./: CMakeLists.txt  README.md
src/: jacobi_inverse.c  jacobi_inverse.h
test/: jacobi_inverse_test.c
